# Wordle-Project

./: pyproject.toml
src/wordle_project/: WORDS.toml  guess_styler.py  main.py
tests/: test_test_framework.py
