[tool.poetry]
name = "wordle-project"
version = "0.1.0"
description = ""
authors = ["Robert Portelli <github@robertportelli.com>"]
readme = "README.md"
packages = [{include = "wordle_project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
